@@ -10,6 +10,7 @@
 ## 1.12.1 (TBD)
 ### Bugfixes
 * Fixed memory hooks for Cuda 11.5
+* Fixed memory type cache merge
 
 ## 1.12.0 (January 12, 2022)
 ### Features:
